<!-- (c) All rights reserved. Do not share, copy, reproduce 
	or sell any part of this library unless you have written permission from 
	MineAcademy.org. All infringements will be prosecuted. If you are the personal 
	owner of the MineAcademy.org End User License then you may use it for your 
	own use in plugins but not for any other purpose. -->
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.mineacademy</groupId>
    <artifactId>Foundation</artifactId>
    <version>6.9.3</version>
    <packaging>jar</packaging>

    <name>Foundation</name>
    <description>A framework for the development of Minecraft plugins for Paper.</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>1.8</java.version>
    </properties>

    <repositories>
        <repository>
            <id>mineacademy-repo</id>
            <url>https://bitbucket.org/kangarko/libraries/raw/master</url>
        </repository>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>minecraft-libraries</id>
            <url>https://libraries.minecraft.net</url>
        </repository>
    </repositories>

    <dependencies>

        <!-- Lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.34</version>
        </dependency>

        <!-- This is NOT used anywhere in Foundation, only here to prevent compile 
			errors from missing the log4j dependency that is shipped in the server jar -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.23.1</version>
            <scope>provided</scope>
        </dependency>

        <!-- NOT used anywhere, just for backward compatibility with 1.8.8 -->
        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <!-- DO NOT CHANGE VERSION - breaks 1.8.8 -->
            <version>1.33</version>
        </dependency>

        <!-- Only needed for NBT-API -->
        <dependency>
            <groupId>com.mojang</groupId>
            <artifactId>datafixerupper</artifactId>
            <version>4.0.26</version>
        </dependency>

        <!-- The core Spigot-API -->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.21.1-R0.1-SNAPSHOT</version>
        </dependency>

        <!-- MineAcademy guaranteed availability repos for plugins -->
        <dependency>
            <groupId>org.mineacademy.plugin</groupId>
            <artifactId>AuthMe</artifactId>
            <version>5.6.0-SNAPSHOT-2622</version>
        </dependency>
        <dependency>
            <groupId>org.mineacademy.plugin</groupId>
            <artifactId>BentoBox</artifactId>
            <version>2.2.0</version>
        </dependency>
        <dependency>
            <groupId>org.mineacademy.plugin</groupId>
            <artifactId>CitizensAPI</artifactId>
            <version>2.0.33-36</version>
        </dependency>
        <dependency>
            <groupId>org.mineacademy.plugin</groupId>
            <artifactId>CMIAPI</artifactId>
            <version>9.6.5.0</version>
        </dependency>
        <dependency>
            <groupId>org.mineacademy.plugin</groupId>
            <artifactId>DiscordSRV</artifactId>
            <version>1.28.0</version>
        </dependency>
        <dependency>
            <groupId>org.mineacademy.plugin</groupId>
            <artifactId>EssentialsX</artifactId>
            <version>2.21.0-SNAPSHOT-1565</version>
        </dependency>
        <dependency>
            <groupId>org.mineacademy.plugin</groupId>
            <artifactId>Factions</artifactId>
            <version>3.3.3</version>
        </dependency>
        <dependency>
            <groupId>org.mineacademy.plugin</groupId>
            <artifactId>FactionsUUID</artifactId>
            <version>1.6.9.5-U0.6.39-b341</version>
        </dependency>
        <dependency>
            <groupId>org.mineacademy.plugin</groupId>
            <artifactId>MassiveCore</artifactId>
            <version>3.3.3</version>
        </dependency>
        <dependency>
            <groupId>org.mineacademy.plugin</groupId>
            <artifactId>mcMMO</artifactId>
            <version>2.1.231</version>
        </dependency>
        <dependency>
            <groupId>org.mineacademy.plugin</groupId>
            <artifactId>MultiverseCore</artifactId>
            <version>4.3.12</version>
        </dependency>
        <dependency>
            <groupId>org.mineacademy.plugin</groupId>
            <artifactId>MythicMobs</artifactId>
            <version>5.6.1</version>
        </dependency>
        <dependency>
            <groupId>org.mineacademy.plugin</groupId>
            <artifactId>NuVotifier</artifactId>
            <version>2.7.3</version>
        </dependency>
        <dependency>
            <groupId>org.mineacademy.plugin</groupId>
            <artifactId>PlaceholderAPI</artifactId>
            <version>2.11.5</version>
        </dependency>
        <dependency>
            <groupId>org.mineacademy.plugin</groupId>
            <artifactId>ProtocolLib</artifactId>
            <version>5.1.0-SNAPSHOT-679</version>
        </dependency>
        <dependency>
            <groupId>org.mineacademy.plugin</groupId>
            <artifactId>Residence</artifactId>
            <version>5.1.4.3</version>
        </dependency>
        <dependency>
            <groupId>org.mineacademy.plugin</groupId>
            <artifactId>SimpleClans</artifactId>
            <version>2.19.3-SNAPSHOT-418</version>
        </dependency>
        <dependency>
            <groupId>org.mineacademy.plugin</groupId>
            <artifactId>Towny</artifactId>
            <version>0.100.1.21</version>
        </dependency>
        <dependency>
            <groupId>org.mineacademy.plugin</groupId>
            <artifactId>TownyChat</artifactId>
            <version>0.115</version>
        </dependency>
        <dependency>
            <groupId>org.mineacademy.plugin</groupId>
            <artifactId>Vault</artifactId>
            <version>1.7.3</version>
        </dependency>
        <dependency>
            <groupId>org.mineacademy.plugin</groupId>
            <artifactId>WorldEdit</artifactId>
            <version>7.3.0</version>
        </dependency>
        <dependency>
            <groupId>org.mineacademy.plugin</groupId>
            <artifactId>WorldGuard</artifactId>
            <version>7.0.9</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.12.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <!-- Incompatible with Java 21 and jitpack -->
            <!--<plugin>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok-maven-plugin</artifactId>
                <version>1.18.20.0</version>
                <configuration>
                    <sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
                    <outputDirectory>${delombok.output}</outputDirectory>
                    <addOutputDirectory>false</addOutputDirectory>
                </configuration>
                <executions>
                    <execution>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>delombok</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.6.3</version>
                <configuration>
                    <doclint>none</doclint>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>-->
        </plugins>
    </build>
</project>
